--- a/transformer-oil-summary.html
+++ b/transformer-oil-summary.html
@@ -9,103 +9,72 @@
 <style>
 body{font-family:Arial;margin:0;background:#f2f6ff}
 
-/* ===== TOP BAR ===== */
+/* TOP BAR */
 .topbar{
   background:#003f88;color:white;
   padding:12px 15px;
   display:flex;justify-content:space-between;align-items:center
 }
 .left-btns{display:flex;gap:10px}
-.topbar button,.topbar select{
+.topbar button{
   padding:8px 12px;border:none;border-radius:5px;
-  font-weight:bold;cursor:pointer
+  font-weight:bold;cursor:pointer;background:white;color:#003f88
 }
-.topbar button{background:white;color:#003f88}
-.topbar select{background:white;color:#003f88}
 
 .container{max-width:1500px;margin:20px auto;padding:10px}
 
-/* ===== ALERT PANEL ===== */
-.alert-panel{
-  display:flex;
-  gap:15px;
-  flex-wrap:wrap;
-  margin-bottom:15px;
-}
-
-.alert-card{
-  flex:1;
-  min-width:220px;
-  padding:12px;
-  border-radius:8px;
-  color:white;
-  font-weight:bold;
-  box-shadow:0 3px 8px rgba(0,0,0,.2);
-  animation:pulse 2.5s infinite;
-}
-
-.critical{background:#cc0000;}
-.warning{background:#ff9900;}
-.highest{background:#003f88;}
-
-@keyframes pulse{
-  0%{transform:scale(1)}
-  50%{transform:scale(1.03)}
-  100%{transform:scale(1)}
-}
-
-/* ===== SEARCH ===== */
-.search-box{
-  margin-bottom:15px;
-}
-.search-box input{
-  padding:8px;width:250px;
-  border-radius:5px;border:1px solid #ccc
-}
-
-/* ===== TABLE ===== */
+/* TABLE */
 table{
-  width:100%;
-  border-collapse:collapse;
-  background:white;
-  box-shadow:0 2px 6px rgba(0,0,0,.15);
+  width:100%;border-collapse:collapse;
+  background:white;box-shadow:0 2px 6px rgba(0,0,0,.15)
 }
 th,td{
-  padding:8px;
-  border:1px solid #ddd;
-  font-size:13px;
-  text-align:center;
+  padding:8px;border:1px solid #ddd;
+  text-align:center;font-size:13px
 }
-th{
-  background:#003f88;
-  color:white;
-  position:sticky;
-  top:0;
-}
-tr:hover{background:#eef5ff;cursor:pointer}
-.highlight{background:#ffeaea !important}
+th{background:#003f88;color:white}
 
-/* Wrap style */
+tr:hover{background:#eef5ff;cursor:pointer}
+
 .wrap-cell{
   white-space:pre-line;
   text-align:left;
-  line-height:1.4;
 }
 
-/* Oil level colors */
+/* Oil Level Colors */
 .low{background:#ff4d4d;color:white}
 .medium{background:#ffb84d}
 .normal{background:#ffff66}
 .good{background:#99e699}
 .excellent{background:#33cc33;color:white}
 
-/* ===== CHART BOX ===== */
-.topbox{
-  margin:20px 0;background:white;padding:15px;
-  border-radius:10px;box-shadow:0 2px 6px rgba(0,0,0,.15)
+/* POPUP */
+.popup{
+  display:none;
+  position:fixed;
+  top:0;left:0;width:100%;height:100%;
+  background:rgba(0,0,0,.5);
+  justify-content:center;
+  align-items:center;
+  z-index:9999;
+}
+.popup-content{
+  background:white;
+  width:80%;
+  max-width:800px;
+  padding:20px;
+  border-radius:10px;
+  position:relative;
+}
+.close-btn{
+  position:absolute;
+  right:15px;top:10px;
+  font-size:18px;
+  cursor:pointer;
+  font-weight:bold;
 }
 
-.footer{text-align:center;padding:15px;font-size:14px;color:#555}
+.footer{text-align:center;padding:15px;color:#555}
 </style>
 </head>
 
@@ -116,41 +85,9 @@ tr:hover{background:#eef5ff;cursor:pointer}
     <button onclick="history.back()">⬅ Back</button>
     <button onclick="location.href='https://08electricaldata.github.io/'">🏠 Home</button>
   </div>
-  <div>
-    Year:
-    <select id="yearSelect"></select>
-    Chart:
-    <select id="chartType">
-      <option value="bar">Bar</option>
-      <option value="pie">Pie</option>
-    </select>
-    <button onclick="exportTable()">📥 Export Excel</button>
-  </div>
 </div>
 
 <div class="container">
-
-<!-- ALERT PANEL -->
-<div class="alert-panel">
-  <div class="alert-card critical" id="criticalBox">
-    🔴 Critical Transformers: 0
-  </div>
-  <div class="alert-card warning" id="warningBox">
-    🟡 Warning Transformers: 0
-  </div>
-  <div class="alert-card highest" id="highestBox">
-    📈 Highest Consumption: -
-  </div>
-</div>
-
-<div class="search-box">
-  <input type="text" id="searchInput" placeholder="Search Transformer...">
-</div>
-
-<div class="topbox">
-  <h3 id="topTitle">Top 10 Transformers Consumption</h3>
-  <canvas id="topChart" height="100"></canvas>
-</div>
 
 <table id="dataTable">
 <thead></thead>
@@ -159,8 +96,16 @@ tr:hover{background:#eef5ff;cursor:pointer}
 
 </div>
 
+<!-- POPUP -->
+<div class="popup" id="trendPopup">
+  <div class="popup-content">
+    <span class="close-btn" onclick="closePopup()">✖</span>
+    <canvas id="trendChart" height="100"></canvas>
+  </div>
+</div>
+
 <div class="footer">
-© 08 Electrical Data | Transformer Oil Monitoring Dashboard
+© 08 Electrical Data | Transformer Oil Monitoring
 </div>
 
 <script>
@@ -175,28 +120,7 @@ async function load(){
   const data=await res.json();
   headers=data.headers;
   fullData=data.rows;
-
-  buildYearDropdown();
-  buildTable(fullData);
-  setDefaultYear();
-}
-
-function buildYearDropdown(){
-  const years=["2024","2025","2026"];
-  const sel=document.getElementById("yearSelect");
-  years.forEach(y=>{
-    const o=document.createElement("option");
-    o.value=y;o.textContent=y;sel.appendChild(o);
-  });
-  sel.onchange=()=>updateTop10(sel.value);
-  document.getElementById("chartType").onchange=
-  ()=>updateTop10(sel.value);
-}
-
-function setDefaultYear(){
-  const lastYear=new Date().getFullYear()-1;
-  document.getElementById("yearSelect").value=lastYear;
-  updateTop10(lastYear);
+  buildTable();
 }
 
 function formatDate(d){
@@ -213,9 +137,7 @@ function oilClass(val){
   return "excellent";
 }
 
-function buildTable(data){
-
-  const dropCols=[5,7,9]; // F,H,J removed
+function buildTable(){
 
   const thead=document.querySelector("#dataTable thead");
   const tbody=document.querySelector("#dataTable tbody");
@@ -223,46 +145,53 @@ function buildTable(data){
   thead.innerHTML="";
   tbody.innerHTML="";
 
-  let tr=document.createElement("tr");
+  // Columns to display
+  const displayCols=[0,1,2,3,4,6,8,10,12,14,16,18,20,22];
 
-  headers.forEach((h,i)=>{
-    if(dropCols.includes(i)) return;
+  let tr=document.createElement("tr");
+  displayCols.forEach(i=>{
     let th=document.createElement("th");
-    th.textContent=h;
+    th.textContent=headers[i];
     tr.appendChild(th);
   });
-
   thead.appendChild(tr);
 
-  data.forEach(r=>{
+  fullData.forEach(r=>{
     let tr=document.createElement("tr");
 
-    r.forEach((c,i)=>{
-
-      if(dropCols.includes(i)) return;
-
+    displayCols.forEach(i=>{
       let td=document.createElement("td");
 
       if(i==3){
-        td.textContent=formatDate(c);
+        td.textContent=formatDate(r[i]);
       }
-      else if([11,12,13,14,15,16].includes(i)){
-        if(c){
-          td.textContent=c.replace(/,\s*/g,",\n");
-          td.classList.add("wrap-cell");
-        }
+      else if(i==4){
+        let val=parseFloat(r[i])||0;
+        td.textContent=val+"%";
+        td.classList.add(oilClass(val));
+      }
+      else if([6,8,10,12,14,16,18,20,22].includes(i)){
+        let val=parseFloat(r[i])||0;
+        td.textContent=val>0?val+" ltrs":"";
       }
       else{
-        td.textContent=c;
+        td.textContent=r[i];
       }
 
-      if(i==4){
-        td.classList.add(oilClass(parseFloat(c)||0));
+      // Transformer number click → popup
+      if(i==2){
+        td.style.fontWeight="bold";
+        td.style.color="#003f88";
+        td.onclick=function(e){
+          e.stopPropagation();
+          showTrend(r);
+        };
       }
 
       tr.appendChild(td);
     });
 
+    // Row click → history
     tr.onclick=function(){
       const trf=r[2];
       location.href=
@@ -273,106 +202,38 @@ function buildTable(data){
   });
 }
 
-function updateTop10(year){
+function showTrend(row){
 
-  let colIndex = year=="2026"?6:
-                 year=="2025"?8:10;
+  document.getElementById("trendPopup").style.display="flex";
 
-  let sorted=fullData
-    .map(r=>({
-      name:r[2],
-      value:parseFloat(r[colIndex])||0,
-      oil:parseFloat(r[4])||0
-    }))
-    .sort((a,b)=>b.value-a.value);
-
-  const top10=sorted.slice(0,10);
-
-  highlightHighest(sorted[0].name);
-  drawChart(top10,year);
-
-  const criticalCount = fullData.filter(r =>
-    (parseFloat(r[4])||0) < 30
-  ).length;
-
-  const warningCount = fullData.filter(r =>{
-    let v=parseFloat(r[4])||0;
-    return v>=30 && v<50;
-  }).length;
-
-  document.getElementById("criticalBox").innerText =
-    "🔴 Critical Transformers: " + criticalCount;
-
-  document.getElementById("warningBox").innerText =
-    "🟡 Warning Transformers: " + warningCount;
-
-  document.getElementById("highestBox").innerText =
-    "📈 Highest Consumption ("+year+"): " +
-    sorted[0].name + " (" + sorted[0].value + ")";
-}
-
-function highlightHighest(name){
-  document.querySelectorAll("tbody tr").forEach(tr=>{
-    tr.classList.remove("highlight");
-    if(tr.cells[2].textContent==name){
-      tr.classList.add("highlight");
-    }
-  });
-}
-
-function drawChart(data,year){
-
-  const type=document.getElementById("chartType").value;
-
-  document.getElementById("topTitle").innerText=
-  "Top 10 Transformers Consumption - "+year;
-
-  const ctx=document.getElementById("topChart");
+  const years=["2018","2019","2020","2021","2022","2023","2024","2025","2026"];
+  const values=[
+    row[22],row[20],row[18],row[16],
+    row[14],row[12],row[10],row[8],row[6]
+  ].map(v=>parseFloat(v)||0);
 
   if(chartInstance) chartInstance.destroy();
 
-  chartInstance=new Chart(ctx,{
-    type:type,
-    data:{
-      labels:data.map(d=>d.name),
-      datasets:[{
-        data:data.map(d=>d.value),
-        backgroundColor:"#003f88"
-      }]
-    },
-    options:{plugins:{legend:{display:type=="pie"}}}
-  });
+  chartInstance=new Chart(
+    document.getElementById("trendChart"),
+    {
+      type:"line",
+      data:{
+        labels:years,
+        datasets:[{
+          label:"Yearly Oil Consumption",
+          data:values,
+          borderColor:"#003f88",
+          backgroundColor:"rgba(0,63,136,0.1)",
+          fill:true
+        }]
+      }
+    }
+  );
 }
 
-document.getElementById("searchInput").onkeyup=function(){
-  const term=this.value.toLowerCase();
-  const filtered=fullData.filter(r=>
-    r[2].toString().toLowerCase().includes(term)
-  );
-  buildTable(filtered);
-};
-
-function exportTable(){
-  let csv="";
-  headers.forEach((h,i)=>{
-    if([5,7,9].includes(i)) return;
-    csv+=h+",";
-  });
-  csv+="\n";
-
-  fullData.forEach(r=>{
-    r.forEach((c,i)=>{
-      if([5,7,9].includes(i)) return;
-      csv+=c+",";
-    });
-    csv+="\n";
-  });
-
-  const blob=new Blob([csv],{type:"text/csv"});
-  const link=document.createElement("a");
-  link.href=URL.createObjectURL(blob);
-  link.download="TransformerOil.csv";
-  link.click();
+function closePopup(){
+  document.getElementById("trendPopup").style.display="none";
 }
 
 load();
