--- a/transformer-oil-summary.html
+++ b/transformer-oil-summary.html
@@ -2,20 +2,19 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Transformer Oil Monitoring</title>
+<title>Transformer Oil Monitoring Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
 body{font-family:Arial;margin:0;background:#f2f6ff}
 
-/* TOP BAR */
+/* ===== TOP BAR ===== */
 .topbar{
   background:#003f88;color:white;
   padding:12px 15px;
   display:flex;justify-content:space-between;align-items:center
 }
-.left-btns{display:flex;gap:10px}
 .topbar button{
   padding:8px 12px;border:none;border-radius:5px;
   font-weight:bold;cursor:pointer;background:white;color:#003f88
@@ -23,7 +22,42 @@ body{font-family:Arial;margin:0;background:#f2f6ff}
 
 .container{max-width:1500px;margin:20px auto;padding:10px}
 
-/* TABLE */
+/* ===== STATUS CARDS ===== */
+.status-panel{
+  display:flex;gap:15px;flex-wrap:wrap;margin-bottom:20px
+}
+.status-card{
+  flex:1;min-width:200px;
+  padding:15px;border-radius:10px;
+  color:white;font-weight:bold;
+  text-align:center;
+  box-shadow:0 3px 8px rgba(0,0,0,.2);
+  animation:pulse 2.5s infinite;
+}
+.critical{background:#cc0000}
+.avg{background:#ff9900}
+.medium{background:#ffcc00;color:black}
+.safe{background:#33cc33}
+
+@keyframes pulse{
+  0%{transform:scale(1)}
+  50%{transform:scale(1.05)}
+  100%{transform:scale(1)}
+}
+
+/* ===== CHART ===== */
+.chart-box{
+  background:white;padding:20px;
+  border-radius:10px;
+  box-shadow:0 2px 6px rgba(0,0,0,.15);
+  margin-bottom:20px;
+}
+
+select{
+  padding:6px 10px;margin-bottom:10px
+}
+
+/* ===== TABLE ===== */
 table{
   width:100%;border-collapse:collapse;
   background:white;box-shadow:0 2px 6px rgba(0,0,0,.15)
@@ -33,45 +67,29 @@ th,td{
   text-align:center;font-size:13px
 }
 th{background:#003f88;color:white}
-
 tr:hover{background:#eef5ff;cursor:pointer}
 
-.wrap-cell{
-  white-space:pre-line;
-  text-align:left;
-}
-
-/* Oil Level Colors */
 .low{background:#ff4d4d;color:white}
-.medium{background:#ffb84d}
+.mediumLevel{background:#ffb84d}
 .normal{background:#ffff66}
 .good{background:#99e699}
 .excellent{background:#33cc33;color:white}
 
-/* POPUP */
+/* ===== POPUP ===== */
 .popup{
-  display:none;
-  position:fixed;
+  display:none;position:fixed;
   top:0;left:0;width:100%;height:100%;
   background:rgba(0,0,0,.5);
-  justify-content:center;
-  align-items:center;
-  z-index:9999;
+  justify-content:center;align-items:center;
 }
 .popup-content{
-  background:white;
-  width:80%;
-  max-width:800px;
-  padding:20px;
-  border-radius:10px;
+  background:white;width:80%;max-width:800px;
+  padding:20px;border-radius:10px;
   position:relative;
 }
 .close-btn{
-  position:absolute;
-  right:15px;top:10px;
-  font-size:18px;
-  cursor:pointer;
-  font-weight:bold;
+  position:absolute;right:15px;top:10px;
+  font-size:18px;cursor:pointer
 }
 
 .footer{text-align:center;padding:15px;color:#555}
@@ -81,7 +99,7 @@ tr:hover{background:#eef5ff;cursor:pointer}
 <body>
 
 <div class="topbar">
-  <div class="left-btns">
+  <div>
     <button onclick="history.back()">⬅ Back</button>
     <button onclick="location.href='https://08electricaldata.github.io/'">🏠 Home</button>
   </div>
@@ -89,6 +107,30 @@ tr:hover{background:#eef5ff;cursor:pointer}
 
 <div class="container">
 
+<!-- STATUS COUNTERS -->
+<div class="status-panel">
+  <div class="status-card critical">
+    🔴 Critical (<30%)<br><span id="countCritical">0</span>
+  </div>
+  <div class="status-card avg">
+    🟡 30–50%<br><span id="countAvg">0</span>
+  </div>
+  <div class="status-card medium">
+    🟠 50–70%<br><span id="countMedium">0</span>
+  </div>
+  <div class="status-card safe">
+    🟢 Safe (>70%)<br><span id="countSafe">0</span>
+  </div>
+</div>
+
+<!-- YEAR DROPDOWN GRAPH -->
+<div class="chart-box">
+  <label>Select Year:</label>
+  <select id="yearSelect"></select>
+  <canvas id="mainChart" height="100"></canvas>
+</div>
+
+<!-- TABLE -->
 <table id="dataTable">
 <thead></thead>
 <tbody></tbody>
@@ -105,7 +147,7 @@ tr:hover{background:#eef5ff;cursor:pointer}
 </div>
 
 <div class="footer">
-© 08 Electrical Data | Transformer Oil Monitoring
+© 08 Electrical Data | Transformer Oil Dashboard
 </div>
 
 <script>
@@ -113,40 +155,104 @@ tr:hover{background:#eef5ff;cursor:pointer}
 const JSON_URL =
 "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/master/transformeroil.json";
 
-let fullData=[], headers=[], chartInstance=null;
+let fullData=[], headers=[], mainChart=null, trendChart=null;
 
 async function load(){
   const res=await fetch(JSON_URL);
   const data=await res.json();
   headers=data.headers;
   fullData=data.rows;
+
+  buildYearDropdown();
   buildTable();
+  updateStatusCounts();
 }
 
-function formatDate(d){
-  if(!d) return "";
-  const dt=new Date(d);
-  return dt.toLocaleDateString("en-GB").replace(/\//g,"-");
+function buildYearDropdown(){
+  const sel=document.getElementById("yearSelect");
+  for(let y=2018;y<=2026;y++){
+    let o=document.createElement("option");
+    o.value=y;o.textContent=y;
+    sel.appendChild(o);
+  }
+  sel.value=new Date().getFullYear();
+  sel.onchange=()=>updateMainChart(sel.value);
+  updateMainChart(sel.value);
 }
 
-function oilClass(val){
-  if(val<30) return "low";
-  if(val<50) return "medium";
-  if(val<70) return "normal";
-  if(val<85) return "good";
-  return "excellent";
+function updateMainChart(year){
+
+  const colIndexMap={
+    2026:6,2025:8,2024:10,
+    2023:12,2022:14,2021:16,
+    2020:18,2019:20,2018:22
+  };
+
+  const col=colIndexMap[year];
+
+  let sorted=fullData
+    .map(r=>({
+      name:r[2],
+      value:parseFloat(r[col])||0
+    }))
+    .sort((a,b)=>b.value-a.value)
+    .slice(0,10);
+
+  if(mainChart) mainChart.destroy();
+
+  mainChart=new Chart(
+    document.getElementById("mainChart"),
+    {
+      type:"bar",
+      data:{
+        labels:sorted.map(d=>d.name),
+        datasets:[{
+          label:"Top 10 Oil Consumption "+year,
+          data:sorted.map(d=>d.value),
+          backgroundColor:"#003f88"
+        }]
+      }
+    }
+  );
+}
+
+function updateStatusCounts(){
+
+  let c=0,a=0,m=0,s=0;
+
+  fullData.forEach(r=>{
+    let v=parseFloat(r[4])||0;
+    if(v<30)c++;
+    else if(v<50)a++;
+    else if(v<70)m++;
+    else s++;
+  });
+
+  animateValue("countCritical",c);
+  animateValue("countAvg",a);
+  animateValue("countMedium",m);
+  animateValue("countSafe",s);
+}
+
+function animateValue(id,end){
+  let start=0;
+  let duration=800;
+  let range=end-start;
+  let stepTime=Math.abs(Math.floor(duration/range));
+  let obj=document.getElementById(id);
+  let timer=setInterval(()=>{
+    start++;
+    obj.textContent=start;
+    if(start>=end) clearInterval(timer);
+  },stepTime||50);
 }
 
 function buildTable(){
 
+  const displayCols=[0,1,2,3,4,6,8,10,12,14,16,18,20,22];
+
   const thead=document.querySelector("#dataTable thead");
   const tbody=document.querySelector("#dataTable tbody");
-
-  thead.innerHTML="";
-  tbody.innerHTML="";
-
-  // Columns to display
-  const displayCols=[0,1,2,3,4,6,8,10,12,14,16,18,20,22];
 
   let tr=document.createElement("tr");
   displayCols.forEach(i=>{
@@ -162,23 +268,22 @@ function buildTable(){
     displayCols.forEach(i=>{
       let td=document.createElement("td");
 
-      if(i==3){
-        td.textContent=formatDate(r[i]);
-      }
-      else if(i==4){
-        let val=parseFloat(r[i])||0;
-        td.textContent=val+"%";
-        td.classList.add(oilClass(val));
+      if(i==4){
+        let v=parseFloat(r[i])||0;
+        td.textContent=v+"%";
+        if(v<30)td.classList.add("low");
+        else if(v<50)td.classList.add("mediumLevel");
+        else if(v<70)td.classList.add("normal");
+        else td.classList.add("excellent");
       }
       else if([6,8,10,12,14,16,18,20,22].includes(i)){
-        let val=parseFloat(r[i])||0;
-        td.textContent=val>0?val+" ltrs":"";
+        let v=parseFloat(r[i])||0;
+        td.textContent=v>0?v+" ltrs":"";
       }
       else{
         td.textContent=r[i];
       }
 
-      // Transformer number click → popup
       if(i==2){
         td.style.fontWeight="bold";
         td.style.color="#003f88";
@@ -191,11 +296,9 @@ function buildTable(){
       tr.appendChild(td);
     });
 
-    // Row click → history
     tr.onclick=function(){
-      const trf=r[2];
       location.href=
-      "https://08electricaldata.github.io/drive-viewer/history.html?id=Transformer-"+trf;
+      "https://08electricaldata.github.io/drive-viewer/history.html?id=Transformer-"+r[2];
     };
 
     tbody.appendChild(tr);
@@ -212,9 +315,9 @@ function showTrend(row){
     row[14],row[12],row[10],row[8],row[6]
   ].map(v=>parseFloat(v)||0);
 
-  if(chartInstance) chartInstance.destroy();
+  if(trendChart) trendChart.destroy();
 
-  chartInstance=new Chart(
+  trendChart=new Chart(
     document.getElementById("trendChart"),
     {
       type:"line",
