--- a/transformer-oil-summary.html
+++ b/transformer-oil-summary.html
@@ -20,6 +20,21 @@ body{font-family:Arial;margin:0;background:#f2f6ff}
 }
 
 .container{max-width:1500px;margin:20px auto;padding:10px}
+/* ===== MAIN HEADER ===== */
+.main-header{
+  text-align:center;
+  margin:20px 0 10px 0;
+}
+.main-header h1{
+  margin:0;
+  font-size:26px;
+  color:#003f88;
+}
+.main-header p{
+  margin:5px 0 0 0;
+  font-size:14px;
+  color:#555;
+}
 
 .status-panel{
   display:flex;gap:15px;flex-wrap:wrap;margin-bottom:20px
@@ -101,6 +116,12 @@ tr:hover{background:#eef5ff;cursor:pointer}
 </div>
 
 <div class="container">
+
+<div class="main-header">
+  <h1>TRANSFORMER OIL CONSUMPTION REPORT</h1>
+  <p>Designed and Maintained by Rakesh Chandra Sethy</p>
+</div>
+
 
 <div class="status-panel">
   <div class="status-card critical">
