--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@ function addJob(){
     "https://08electricaldata.github.io/qrsubmit.html?id=" +
     encodeURIComponent(id);
 }
+function openDrawings(){
+  const id = normalize(new URLSearchParams(location.search).get("id"));
+  location.href =
+    "https://08electricaldata.github.io/drawings/index.html?id=" +
+    encodeURIComponent(id);
+}
 
 function parseDate(v){
   if(!v) return null;
@@ -211,9 +217,12 @@ async function showMotor(c,id){
       <p><span class="label">Last VFD PM:</span> ${p.vfd}</p>
     </div>
 
-    <div class="action-row">
-      <button class="action-btn" onclick="openHistory()">📜 History</button>
-    </div>
+  <div class="action-row">
+  <button class="action-btn" onclick="openHistory()">📜 History</button>
+  <button class="action-btn" onclick="openDrawings()">📐 Drawings</button>
+  <button class="action-btn" onclick="addJob()">➕ ADD JOB</button>
+</div>
+
   </div>`;
 }
 
